<resources>
    <string name="app_name">View Accessibility Techniques</string>
    <string name="menu_home">Home</string>
    <string name="home_heading">Android View Accessibility Techniques Demo App</string>
    <string name="home_description">This application demonstrates a variety of accessibility best practices for View-based UIs, as well as the problems they can address.</string>
    <string name="home_description_2">Use the cards below to pick a topic area and follow the directions on the screen regarding the assistive technology employed in that demonstration.</string>
    <string name="home_section_1_basics">Accessibility Basics</string>
    <string name="home_section_2_grouping">Grouping and Ordering</string>
    <string name="home_section_3_dynamic_behaviors">Dynamic Behaviors</string>
    <string name="home_section_4_component_types">Specific Component Types</string>
    <string name="home_show_details">Show details</string>
    <string name="menu_text_alternatives">Text alternatives</string>
    <string name="text_alternatives_heading">Provide text alternatives for non-text content when appropriate</string>
    <string name="text_alternatives_description_1">All informative non-text content must have a text alternative associated with it, generally via the contentDescription property. Purely decorative content that conveys no meaning must be marked as such with either a null contentDescription or importantForAccessibility=\"no\".</string>
    <string name="text_alternatives_description_2">Informative non-text content that is redundant with adjacent text content should be grouped with that text content. See examples 3 and 4 below.</string>
    <string name="text_alternatives_description_3">Turn on TalkBack and read the screen elements for examples.</string>
    <string name="text_alternatives_example_1_heading">Bad example 1: Sunrise and sunset times and icons without text alternatives</string>
    <string name="text_alternatives_example_sunrise_time">6:24am</string>
    <string name="text_alternatives_example_sunset_time">5:35pm</string>
    <string name="text_alternatives_example_2_heading">OK example 2: Sunrise and sunset times and icons with text alternatives</string>
    <string name="text_alternatives_example_sunrise_content_description">Sunrise</string>
    <string name="text_alternatives_example_sunset_content_description">Sunset</string>
    <string name="text_alternatives_example_3_heading">Good example 3: Sunrise and sunset times grouped with their icons</string>
    <string name="text_alternatives_example_3_note">Note that all example headings on this screen use a similar technique.</string>
    <string name="text_alternatives_example_4_heading">Good example 4: Sunrise and sunset times and icons with group text alternatives</string>
    <string name="text_alternatives_example_4_grouped_sunrise_text">Sunrise at 6:24am</string>
    <string name="text_alternatives_example_4_grouped_sunset_text">Sunset at 5:35pm</string>
    <string name="text_alternatives_example_5_heading">Bad example 5: A \'Share\' icon button without a text alternative</string>
    <string name="text_alternatives_example_5_message">Share icon without text alternative clicked.</string>
    <string name="text_alternatives_example_6_heading">Good example 6: A \'Share\' icon button with a text alternative</string>
    <string name="text_alternatives_example_6_content_description">Share</string>
    <string name="text_alternatives_example_6_message">Share icon with text alternative clicked.</string>
    <string name="text_alternatives_example_7_heading">Bad example 7: Decorative images without any contentDescription</string>
    <string name="text_alternatives_example_7_decorated_text">Example decorated text.</string>
    <string name="text_alternatives_example_8_heading">Bad example 8: Decorative images with text alternatives</string>
    <string name="text_alternatives_example_8_content_description">Sprout</string>
    <string name="text_alternatives_example_8_decorated_text">Example decorated text.</string>
    <string name="text_alternatives_example_9_heading">Good example 9: Decorative images with null contentDescription</string>
    <string name="text_alternatives_example_9_decorated_text">Example decorated text.</string>
    <string name="text_alternatives_example_10_heading">Good example 10: Decorative images with importantForAccessibility=\"no\"</string>
    <string name="text_alternatives_example_10_decorated_text">Example decorated text.</string>
    <string name="menu_input_field_labels">Input field labels</string>
    <string name="input_field_labels_heading">Associate labels and input fields programmatically</string>
    <string name="input_field_labels_description">Turn on TalkBack and swipe through this page to hear demonstrations of input controls with and without programmatically associated labels.</string>
    <string name="input_field_labels_example_1">Bad example 1: EditText without associated field label</string>
    <string name="input_field_labels_unassociated_edittext_label">Field label not associated with EditText</string>
    <string name="input_field_labels_example_2">Good example 2: EditText with associated field label (labelFor)</string>
    <string name="input_field_labels_associated_edittext_label">Field label associated with EditText</string>
    <string name="input_field_labels_example_3">Good example 3: TextInputEditText automatically associates hint</string>
    <string name="input_field_labels_associated_textinputedittext_label">Associated field label/hint</string>
    <string name="input_field_labels_example_4">Bad example 4: CheckBox without associated field label</string>
    <string name="input_field_labels_unassociated_checkbox_label">Field label not associated with CheckBox</string>
    <string name="input_field_labels_example_5">Good example 5: CheckBox with associated field label (text)</string>
    <string name="input_field_labels_associated_checkbox_label">Field label associated with CheckBox</string>
    <string name="input_field_labels_example_6">Bad example 6: Switch without associated field label</string>
    <string name="input_field_labels_unassociated_switch_label">Field label not associated with Switch</string>
    <string name="input_field_labels_example_7">Good example 7: Switch with associated field label (text)</string>
    <string name="input_field_labels_associated_switch_label">Field label associated with Switch</string>
    <string name="input_field_labels_example_8">Bad example 8: RadioButtons without associated group and field labels</string>
    <string name="input_field_labels_unassociated_radio_group_label">Radio group label not associated with RadioButtons</string>
    <string name="input_field_labels_unassociated_radio_button_label_1">Field label not associated with first RadioButton</string>
    <string name="input_field_labels_unassociated_radio_button_label_2">Field label not associated with second RadioButton</string>
    <string name="input_field_labels_example_9">Good example 9: RadioButtons with associated group (labeledBy) and field labels (text)</string>
    <string name="input_field_labels_example_9_description">Note how TalkBack announces the group label on every focused RadioButton.</string>
    <string name="input_field_labels_associated_radio_group_label">Radio group label</string>
    <string name="input_field_labels_associated_radio_button_label_1">Field label associated with first RadioButton</string>
    <string name="input_field_labels_associated_radio_button_label_2">Field label associated with second RadioButton</string>
    <string name="input_field_labels_example_10">Good example 10: RadioButtons with associated group (containerTitle) and field labels (text)</string>
    <string name="input_field_labels_example_10_description">Note how TalkBack only announces the group label on the first focused RadioButton.</string>
    <string name="input_field_labels_example_11">Good example 11: Button with associated text label (text)</string>
    <string name="input_field_labels_associated_button_label">Button label</string>
    <string name="input_field_labels_example_12">OK example 12: Slider with contentDescription and no labelFor</string>
    <string name="input_field_labels_associated_slider_label">Slider label</string>
    <string name="input_field_labels_associated_slider_content_description">Slider content description</string>
    <string name="input_field_labels_example_13">Good example 13: Slider with contentDescription and labelFor text</string>
    <string name="input_field_labels_associated_slider_2_label">Slider label</string>
    <string name="input_field_labels_associated_slider_2_content_description">Slider content description</string>
    <string name="menu_tap_target_grouping">Tap target grouping</string>
    <string name="menu_dark_theme">Dark theme</string>
    <string name="menu_orientation">Device orientation</string>
    <string name="menu_content_grouping">Content grouping</string>
    <string name="menu_content_group_replacement">Content group replacement</string>
    <string name="menu_heading_semantics">Heading semantics</string>
    <string name="menu_list_semantics">List semantics</string>
    <string name="menu_focusable_controls">Focusable, clickable controls</string>
    <string name="menu_ux_change_announcements">UX change announcements</string>
    <string name="menu_input_error_announcements">Input error announcements</string>
    <string name="menu_text_resizing">Text resizing and reflow</string>
    <string name="menu_accessibility_reading_order">Accessibility reading order</string>
    <string name="menu_keyboard_focus_order">Keyboard and accessibility focus order</string>
    <string name="menu_arrow_key_focus_order">Arrow keys focus order</string>
    <string name="menu_focus_visibility">Custom focus indicators</string>
    <string name="menu_animation_control">Animation control</string>
    <string name="animation_control_heading">Support all necessary animation controls</string>
    <string name="animation_control_description">Animations can cause some people distraction or physical reactions. Any repeating animation should provide a convenient Pause, Stop, or Hide control.</string>
    <string name="animation_control_description_2">Use the Pause/Play button to stop and restart the animation on this page.</string>
    <string name="animation_control_description_3">All animations should honor the “Remove animations” setting, which is automatic in many cases, but not all.</string>
    <string name="animation_control_description_4">To try the \"Remove animations\" setting, open the device Settings app, and select Accessibility, Color and motion (Google) or Accessibility, Visibility Enhancements (Samsung), depending on your Android version. Toggle the \"Remove animations\" setting on to stop the animations on this page.</string>
    <string name="animation_control_fading_text">Animated fading text</string>
    <string name="animation_control_pause">Pause</string>
    <string name="menu_target_size">Minimum touch target size</string>
    <string name="menu_accessibility_action_labels">Accessibility action labels</string>
    <string name="menu_custom_state_descriptions">Custom state descriptions</string>
    <string name="menu_custom_accessibility_actions">Custom accessibility actions</string>
    <string name="menu_accordion">Accordion controls</string>
    <string name="menu_dropdown">Dropdown selection menus</string>
    <string name="menu_autocomplete">Autocomplete input controls</string>
    <string name="menu_autofill">Autofill input fields</string>
    <string name="menu_keyboard_type">Keyboard type</string>
    <string name="menu_inline_links">Links inline with text</string>
    <string name="menu_language_identification">Text language identification</string>
</resources>